# iced_snippets

./: Cargo.toml  README.md  cargo.toml
snippets/custom_theme/: Cargo.toml
snippets/custom_theme/src/: external_view_function.rs  main.rs  theme.rs
snippets/event_stopper/: Cargo.toml
snippets/event_stopper/src/: event_stopper.rs  main.rs
snippets/globabl_hotkey/: Cargo.toml
snippets/globabl_hotkey/src/: hotkeys_management.rs  main.rs
snippets/image_overlay/: Cargo.toml
snippets/image_overlay/src/: image_container.rs  main.rs
snippets/reqwests/: Cargo.toml
snippets/reqwests/src/: main.rs
snippets/subscription/: Cargo.toml  subscription.rs
snippets/subscription/src/: component.rs  main.rs
snippets/testing_work/: Cargo.toml
snippets/testing_work/src/: main.rs
snippets/window_drag/: Cargo.toml
snippets/window_drag/src/: button_on_press.rs  main.rs
