[package]
name = "globabl_hotkey"
edition = "2021"
version.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["tokio", "image", "advanced"] }
crossbeam = { version = "0.8.2" }
global-hotkey = { version = "0.4.0" }
tokio = { version = "1.23.0", features = ["full"] }