[package]
name = "globabl_hotkey"
edition = "2021"
version.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.workspace = true
crossbeam = { version = "0.8.2" }
global-hotkey = { version = "0.4.0" }
tokio.workspace = true
