[package]
name = "reqwests"
edition = "2021"
version.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced.workspace = true
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-websocket = "0.3.0"
serde = { version = "1.0.198", features = ["derive"] }
tokio.workspace = true
